@@ -3498,3 +3498,14 @@ Changes to be committed:
 
 	modified:   History.txt
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+samples.2015/08/25.17_59_18.74.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
